Fix body overflow

--- a/styles/style.css
+++ b/styles/style.css
@@ -10,6 +10,7 @@ div {
 
 body {
     background-color: #141818;
+    overflow: hidden;
 }
 
 .outer {
